# lincity-ng

./: .cvsignore  .gitignore  CMakeLists.txt  README
cmake/Modules/: FindSDL_gfx.cmake
src/TinyLandGen/: ecology.cpp
src/gui/: XmlReader.cpp
src/lincity-ng/: Config.cpp  GameView.cpp  main.cpp
