CMAKE_MINIMUM_REQUIRED(VERSION 3.8)
PROJECT(lincity_ng)

SET(CMAKE_CXX_STANDARD 14)
SET(CMAKE_MODULE_PATH "${CMAKE_SOURCE_DIR}/cmake/Modules" ${CMAKE_MODULE_PATH})

SET(SOURCE_FILES
	src/gui/callback/Callback.hpp
	src/gui/callback/CallbackBase.hpp
	src/gui/callback/Signal.hpp
	src/gui/PainterGL/PainterGL.cpp
	src/gui/PainterGL/PainterGL.hpp
	src/gui/PainterGL/TextureGL.cpp
	src/gui/PainterGL/TextureGL.hpp
	src/gui/PainterGL/TextureManagerGL.cpp
	src/gui/PainterGL/TextureManagerGL.hpp
	src/gui/PainterSDL/PainterSDL.cpp
	src/gui/PainterSDL/PainterSDL.hpp
	src/gui/PainterSDL/TextureManagerSDL.cpp
	src/gui/PainterSDL/TextureManagerSDL.hpp
	src/gui/PainterSDL/TextureSDL.cpp
	src/gui/PainterSDL/TextureSDL.hpp
	src/gui/Button.cpp
	src/gui/Button.hpp
	src/gui/Child.cpp
	src/gui/Child.hpp
	src/gui/Color.cpp
	src/gui/Color.hpp
	src/gui/Component.cpp
	src/gui/Component.hpp
	src/gui/ComponentFactory.cpp
	src/gui/ComponentFactory.hpp
	src/gui/ComponentLoader.cpp
	src/gui/ComponentLoader.hpp
	src/gui/Desktop.cpp
	src/gui/Desktop.hpp
	src/gui/Document.cpp
	src/gui/Document.hpp
	src/gui/DocumentElement.hpp
	src/gui/DocumentImage.cpp
	src/gui/DocumentImage.hpp
	src/gui/Event.cpp
	src/gui/Event.hpp
	src/gui/FilledRectangle.cpp
	src/gui/FilledRectangle.hpp
	src/gui/Filter.cpp
	src/gui/Filter.hpp
	src/gui/FontManager.cpp
	src/gui/FontManager.hpp
	src/gui/Gradient.cpp
	src/gui/Gradient.hpp
	src/gui/Image.cpp
	src/gui/Image.hpp
	src/gui/Painter.hpp
	src/gui/Panel.cpp
	src/gui/Panel.hpp
	src/gui/Paragraph.cpp
	src/gui/Paragraph.hpp
	src/gui/Rect2D.cpp
	src/gui/Rect2D.hpp
	src/gui/ScrollBar.cpp
	src/gui/ScrollBar.hpp
	src/gui/ScrollView.cpp
	src/gui/ScrollView.hpp
	src/gui/Style.cpp
	src/gui/Style.hpp
	src/gui/SwitchComponent.cpp
	src/gui/SwitchComponent.hpp
	src/gui/TableLayout.cpp
	src/gui/TableLayout.hpp
	src/gui/Texture.hpp
	src/gui/TextureManager.cpp
	src/gui/TextureManager.hpp
	src/gui/TooltipManager.cpp
	src/gui/TooltipManager.hpp
	src/gui/Vector2.hpp
	src/gui/Window.cpp
	src/gui/Window.hpp
	src/gui/XmlReader.cpp
	src/gui/XmlReader.hpp
	src/gui_interface/dialbox_interface.h
	src/gui_interface/mps.h
	src/gui_interface/pbar_interface.h
	src/gui_interface/readpng.h
	src/gui_interface/screen_interface.h
	src/gui_interface/shared_globals.h
	src/lincity/modules/all_modules.cpp
	src/lincity/modules/all_modules.h
	src/lincity/modules/blacksmith.cpp
	src/lincity/modules/blacksmith.h
	src/lincity/modules/coal_power.cpp
	src/lincity/modules/coal_power.h
	src/lincity/modules/coalmine.cpp
	src/lincity/modules/coalmine.h
	src/lincity/modules/commune.cpp
	src/lincity/modules/commune.h
	src/lincity/modules/cricket.cpp
	src/lincity/modules/cricket.h
	src/lincity/modules/fire.cpp
	src/lincity/modules/fire.h
	src/lincity/modules/firestation.cpp
	src/lincity/modules/firestation.h
	src/lincity/modules/health_centre.cpp
	src/lincity/modules/health_centre.h
	src/lincity/modules/heavy_industry.cpp
	src/lincity/modules/heavy_industry.h
	src/lincity/modules/light_industry.cpp
	src/lincity/modules/light_industry.h
	src/lincity/modules/market.cpp
	src/lincity/modules/market.h
	src/lincity/modules/mill.cpp
	src/lincity/modules/mill.h
	src/lincity/modules/modules.h
	src/lincity/modules/modules_interfaces.h
	src/lincity/modules/monument.cpp
	src/lincity/modules/monument.h
	src/lincity/modules/oremine.cpp
	src/lincity/modules/oremine.h
	src/lincity/modules/organic_farm.cpp
	src/lincity/modules/organic_farm.h
	src/lincity/modules/parkland.cpp
	src/lincity/modules/parkland.h
	src/lincity/modules/port.cpp
	src/lincity/modules/port.h
	src/lincity/modules/pottery.cpp
	src/lincity/modules/pottery.h
	src/lincity/modules/power_line.cpp
	src/lincity/modules/power_line.h
	src/lincity/modules/recycle.cpp
	src/lincity/modules/recycle.h
	src/lincity/modules/residence.cpp
	src/lincity/modules/residence.h
	src/lincity/modules/rocket_pad.cpp
	src/lincity/modules/rocket_pad.h
	src/lincity/modules/school.cpp
	src/lincity/modules/school.h
	src/lincity/modules/shanty.cpp
	src/lincity/modules/shanty.h
	src/lincity/modules/solar_power.cpp
	src/lincity/modules/solar_power.h
	src/lincity/modules/substation.cpp
	src/lincity/modules/substation.h
	src/lincity/modules/tip.cpp
	src/lincity/modules/tip.h
	src/lincity/modules/track_road_rail.cpp
	src/lincity/modules/track_road_rail.h
	src/lincity/modules/university.cpp
	src/lincity/modules/university.h
	src/lincity/modules/water.cpp
	src/lincity/modules/water.h
	src/lincity/modules/waterwell.cpp
	src/lincity/modules/waterwell.h
	src/lincity/modules/windmill.cpp
	src/lincity/modules/windmill.h
	src/lincity/modules/windpower.cpp
	src/lincity/modules/windpower.h
	src/lincity/all_buildings.cpp
	src/lincity/all_buildings.h
	src/lincity/confw32.h
	src/lincity/ConstructionCount.cpp
	src/lincity/ConstructionCount.h
	src/lincity/ConstructionManager.cpp
	src/lincity/ConstructionManager.h
	src/lincity/ConstructionRequest.cpp
	src/lincity/ConstructionRequest.h
	src/lincity/engglobs.cpp
	src/lincity/engglobs.h
	src/lincity/engine.cpp
	src/lincity/engine.h
	src/lincity/fileutil.cpp
	src/lincity/fileutil.h
	src/lincity/groups.h
	src/lincity/init_game.cpp
	src/lincity/init_game.h
	src/lincity/lc_locale.cpp
	src/lincity/lc_locale.h
	src/lincity/lcconfig.h
	src/lincity/lclib.cpp
	src/lincity/lclib.h
	src/lincity/lcstring.h
	src/lincity/lctypes.h
	src/lincity/lin-city.h
	src/lincity/lintypes.cpp
	src/lincity/lintypes.h
	src/lincity/loadsave.cpp
	src/lincity/loadsave.h
	src/lincity/old_ldsvguts.cpp
	src/lincity/old_ldsvguts.h
	src/lincity/simulate.cpp
	src/lincity/simulate.h
	src/lincity/stats.cpp
	src/lincity/stats.h
	src/lincity/sustainable.h
	src/lincity/transport.cpp
	src/lincity/transport.h
	src/lincity/UserOperation.cpp
	src/lincity/UserOperation.h
	src/lincity/Vehicles.cpp
	src/lincity/Vehicles.h
	src/lincity/world.cpp
	src/lincity/world.h
	src/lincity/xmlloadsave.cpp
	src/lincity/xmlloadsave.h
	src/lincity-ng/binreloc.c
	src/lincity-ng/binreloc.h
	src/lincity-ng/ButtonInterface.cpp
	src/lincity-ng/ButtonPanel.cpp
	src/lincity-ng/ButtonPanel.hpp
	src/lincity-ng/CheckButton.cpp
	src/lincity-ng/CheckButton.hpp
	src/lincity-ng/Config.cpp
	src/lincity-ng/Config.hpp
	src/lincity-ng/Debug.cpp
	src/lincity-ng/Debug.hpp
	src/lincity-ng/Dialog.cpp
	src/lincity-ng/Dialog.hpp
	src/lincity-ng/EconomyGraph.cpp
	src/lincity-ng/EconomyGraph.hpp
	src/lincity-ng/ErrorInterface.cpp
	src/lincity-ng/ErrorInterface.hpp
	src/lincity-ng/Game.cpp
	src/lincity-ng/Game.hpp
	src/lincity-ng/GameView.cpp
	src/lincity-ng/GameView.hpp
	src/lincity-ng/getBundleSharePath.cpp
	src/lincity-ng/HelpWindow.cpp
	src/lincity-ng/HelpWindow.hpp
	src/lincity-ng/main.cpp
	src/lincity-ng/main.hpp
	src/lincity-ng/MainLincity.cpp
	src/lincity-ng/MainLincity.hpp
	src/lincity-ng/MainMenu.cpp
	src/lincity-ng/MainMenu.hpp
	src/lincity-ng/MapEdit.cpp
	src/lincity-ng/MapEdit.hpp
	src/lincity-ng/MapPoint.hpp
	src/lincity-ng/MiniMap.cpp
	src/lincity-ng/MiniMap.hpp
	src/lincity-ng/Mps.cpp
	src/lincity-ng/Mps.hpp
	src/lincity-ng/MpsInterface.cpp
	src/lincity-ng/PBar.cpp
	src/lincity-ng/PBar.hpp
	src/lincity-ng/PbarInterface.cpp
	src/lincity-ng/Permutator.cpp
	src/lincity-ng/Permutator.hpp
	src/lincity-ng/readdir.cpp
	src/lincity-ng/readdir.hpp
	src/lincity-ng/ReadPngInterface.cpp
	src/lincity-ng/ScreenInterface.cpp
	src/lincity-ng/ScreenInterface.hpp
	src/lincity-ng/Sound.cpp
	src/lincity-ng/Sound.hpp
	src/lincity-ng/TimerInterface.cpp
	src/lincity-ng/TimerInterface.hpp
	src/lincity-ng/Util.cpp
	src/lincity-ng/Util.hpp
	src/PhysfsStream/PhysfsSDL.cpp
	src/PhysfsStream/PhysfsSDL.hpp
	src/PhysfsStream/PhysfsStream.cpp
	src/PhysfsStream/PhysfsStream.hpp
	src/tinygettext/findlocale.cpp
	src/tinygettext/findlocale.hpp
	src/tinygettext/gettext.hpp
	src/tinygettext/tinygettext.cpp
	src/tinygettext/tinygettext.hpp
#	src/TinyLandGen/ecology.cpp
#	src/TinyLandGen/ground_sea.cpp
#	src/TinyLandGen/lakes_rivers.cpp
#	src/TinyLandGen/lctypes.h
#	src/TinyLandGen/main.cpp
#	src/TinyLandGen/save.cpp

#	src/tools/xmlgettext/main.cpp
#	src/tools/xmlgettext/XmlReader.cpp
#	src/tools/xmlgettext/XmlReader.hpp

	)


FIND_PACKAGE(SDL)
FIND_PACKAGE(SDL_gfx)
FIND_PACKAGE(LibXml2)
FIND_PACKAGE(SDL_ttf)
FIND_PACKAGE(PhysFS)
FIND_PACKAGE(SDL_mixer)
FIND_PACKAGE(ZLIB)
FIND_PACKAGE(SDL_image)
FIND_PACKAGE(OpenGL)

INCLUDE_DIRECTORIES(src/
					src/lincity/
					${SDL_INCLUDE_DIR}
					${SDLGFX_INCLUDE_DIR}
					${LIBXML2_INCLUDE_DIR}
					${SDL_TTF_INCLUDE_DIRS}
					${PHYSFS_INCLUDE_DIR}
					${SDL_MIXER_INCLUDE_DIRS}
					${ZLIB_INCLUDE_DIRS}
					${SDL_IMAGE_INCLUDE_DIRS}
					${OPENGL_INCLUDE_DIR}
					)

ADD_EXECUTABLE(lincity_ng ${SOURCE_FILES})

ADD_DEFINITIONS(-DDEFAULT_LIBDIR="${PROJECT_SOURCE_DIR}/data")


TARGET_LINK_LIBRARIES(lincity_ng
					  ${SDL_LIBRARY}
					  ${SDLGFX_LIBRARY}
					  ${LIBXML2_LIBRARIES}
					  ${SDL_TTF_LIBRARIES}
					  ${PHYSFS_LIBRARY}
					  ${SDL_MIXER_LIBRARIES}
					  ${ZLIB_LIBRARIES}
					  ${SDL_IMAGE_LIBRARIES}
					  ${OPENGL_LIBRARIES}
					  )